[gd_scene load_steps=2 format=3 uid="uid://dobh6veffkw2t"]

[ext_resource type="Script" uid="uid://dqi0w3hfp8iu0" path="res://scripts/Menu.gd" id="1_xdvgc"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xdvgc")

[node name="MenuPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuPanel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ButtonContainer" type="VBoxContainer" parent="MenuPanel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MenuPanel/MarginContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 48
text = "Gnop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="MenuPanel/MarginContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Start"

[node name="QuitButton" type="Button" parent="MenuPanel/MarginContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Quit	"
